authentication tab align fixed in mobile view

--- a/frontend/src/components/UI/HeroSlider.css
+++ b/frontend/src/components/UI/HeroSlider.css
@@ -85,7 +85,7 @@
   }
   .slider__content h1 {
     /* margin-top: -5rem; */
-    font-size: 2.5rem;
+    /* font-size: 2.5rem; */
   }
 
   .hero-img-style {
